quote entire self sign cert command and escape quotes within

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
     - ssl-certificate
 
 - name: Generate Self-Signed Certificate
-  command: openssl req -new -nodes -x509 -subj "/C=CA/ST=BC/L=Vancouver/O=TELUS/CN={{ ssl_certificate_common_name }}" -days 3650 -keyout {{ ssl_certificate_path_private }} -out {{ ssl_certificate_path_public }} -extensions v3_ca"
+  command: "openssl req -new -nodes -x509 -subj \"/C=CA/ST=BC/L=Vancouver/O=TELUS/CN={{ ssl_certificate_common_name }}\" -days 3650 -keyout {{ ssl_certificate_path_private }} -out {{ ssl_certificate_path_public }} -extensions v3_ca"
   args:
     creates: "{{ ssl_certificate_path_public }}"
   when: ssl_certificate_self_signed
