--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - role: meta/repository
+  - role: colstrom.apt-repository
     repository_key: "0xaec75ad1d1e5d3d2"
     repository_url: "deb http://ppa.launchpad.net/mizuno-as/silversearcher-ag/ubuntu {{ ansible_distribution_release }} main"
 galaxy_info:
