combined with self signed

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,13 +39,21 @@
   tags:
     - ssl-certificate
 
-- name: Upload Combined Public/Private Key
+- name: Upload Combined Public/Private Key (not Self-Signed)
   template:
     src: template.combined
     dest: "{{ ssl_certificate_path_combined }}"
     owner: "{{ ssl_certificate_owner }}"
     group: "{{ ssl_certificate_group }}"
     mode: 0440
-  when: ssl_certificate_combined
+  when: ssl_certificate_combined and !ssl_certificate_self_signed
+  tags:
+    - ssl-certificate
+
+- name: Upload Combined Public/Private Key (Self-Signed)
+  command: "cat {{ ssl_certificate_path_private }} > {{ ssl_certificate_path_combined }} && cat {{ ssl_certificate_path_public }} >> {{ ssl_certificate_path_combined }}"
+#    src: template.combined
+#    mode: 0440
+  when: ssl_certificate_combined and ssl_certificate_self_signed
   tags:
     - ssl-certificate
