add dependency and RHEL

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,3 +10,8 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - all
+    - name: RedHat
+      versions:
+        - all
+dependencies: []
+
