set mode of private key to 0440

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,6 +18,17 @@
   tags:
     - ssl-certificate
 
+- name: Set chmod on private key
+  file: 
+    path: "{{ ssl_certificate_path_private }}" 
+    chmod: "0440" 
+    owner: "{{ ssl_certificate_owner }}"
+    group: "{{ ssl_certificate_group }}"
+  when: ssl_certificate_self_signed
+  notify: Upload Combined Public/Private Key (Self-Signed)
+  tags:
+    - ssl-certificate
+
 - name: Upload Public Certificate
   template:
     src: template.certificate
