--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,7 +13,7 @@
   command: "openssl req -newkey {{ ssl_certificate_self_options }} -x509 -subj \"{{ ssl_certificate_self_subject }}\" -days {{ ssl_certificate_self_age }} -keyout {{ ssl_certificate_path_private }} -out {{ ssl_certificate_path_public }} -extensions v3_ca"
   args:
     creates: "{{ ssl_certificate_path_public }}"
-  when: "{{ ssl_certificate_self_signed }}"
+  when: ssl_certificate_self_signed | bool
   notify: Upload Combined Public/Private Key (Self-Signed)
   tags:
     - ssl-certificate
