--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,7 +24,7 @@
     mode: "0400" 
     owner: "{{ ssl_certificate_owner }}"
     group: "{{ ssl_certificate_group }}"
-  when: ssl_certificate_self_signed
+  when: ssl_certificate_self_signed | bool
   notify: Upload Combined Public/Private Key (Self-Signed)
   tags:
     - ssl-certificate
@@ -36,7 +36,7 @@
     owner: "{{ ssl_certificate_owner }}"
     group: "{{ ssl_certificate_group }}"
     mode: 0440
-  when: not ssl_certificate_self_signed
+  when: not ssl_certificate_self_signed | bool
   tags:
     - ssl-certificate
 
@@ -47,7 +47,7 @@
     owner: "{{ ssl_certificate_owner }}"
     group: "{{ ssl_certificate_group }}"
     mode: 0400
-  when: not ssl_certificate_self_signed
+  when: not ssl_certificate_self_signed | bool
   tags:
     - ssl-certificate
 
@@ -58,6 +58,6 @@
     owner: "{{ ssl_certificate_owner }}"
     group: "{{ ssl_certificate_group }}"
     mode: 0400
-  when: ssl_certificate_combined and not ssl_certificate_self_signed
+  when: ssl_certificate_combined and not ssl_certificate_self_signed | bool
   tags:
     - ssl-certificate
