--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,6 @@ ssl_certificate_public_contents: ''
 ssl_certificate_private_contents: ''
 
 ssl_certificate_contents:
-  "{{ ssl_certificate_name }}":
+  ssl:
     private: "{{ ssl_certificate_private_contents }}"
     public: "{{ ssl_certificate_public_contents }}"
