--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -1,7 +1,10 @@
 ---
-- hosts: localhost
+# host to test against
+- hosts: test-kitchen
   remote_user: root
+
   roles:
+    # name of role to test
     - role: ansible-ssl-certificate
       # explicity defining here since travis boxes have unusually large fqdns
       ssl_certificate_self_signed_common_name: travis
